<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Guinea Track</string>
    <string name="title_activity_guinea_pig_detail">Characteristics</string>
    <string name="title_activity_guinea_pig_add">New Guinea Pig</string>
    <string name="main_activity_subtitle">M:%1$d F:%2$d C:%3$d</string>
    <string name="pigs_total">Total: %d</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="change_picture">Change Picture</string>
    <string name="pig_name">Name:</string>
    <string name="pig_race">Race:</string>
    <string name="pig_color">Color:</string>
    <string name="pig_birthday">Birthday:</string>
    <string name="pig_gender">Gender:</string>
    <string name="pig_type">Typ:</string>
    <string name="title_activity_edit">Edit Guinea Pig</string>
    <string name="error_empty_fields">Please fill out all fields</string>
    <string name="save_error_message">Saving failing</string>
    <string name="update_error_message">The new values could not be stored for this guinea pig</string>
    <string name="image_description">No picture available</string>
    <string name="pick_picture">Pick new picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="error_loading_pigs">An error occurred while loading the guinea pigs</string>
    <string name="last_birth">Last Birth:</string>
    <string name="unknown">Unknown</string>
    <string name="pig_identifier" translatable="false">guinea pig</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="castrato">Castrato</string>
    <string name="type_sale">Sale</string>
    <string name="type_breed">Breed</string>
    <string name="type_rescue">Rescue</string>
    <string name="deletion_confirmation_text">Are you sure you want to remove %s?</string>
    <string name="message_unsaved_update">Are you sure you want to leave without saving? Any updated information about the guinea pig, will be lost.</string>
    <string name="message_unsaved_guinea_pig">Are you sure you don\'t want to add the guinea pig? Any information you typed in so far will be lost.</string>
    <string name="error_pig_not_deleted_message">Guinea pig could not be deleted</string>
    <string name="no_guinea_pigs_title">No guinea pigs</string>
    <string name="no_guinea_pigs_message">Currently you got no guinea pigs stored. You can add a new guinea pig by tapping the plus button.</string>
</resources>
